--- a/RedditVideoGenerator/Controls/CommentCard.xaml
+++ b/RedditVideoGenerator/Controls/CommentCard.xaml
@@ -3,8 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:htmltextblock="http://www.quickzip.org/BaseControls"
-    xmlns:local="clr-namespace:RedditVideoGenerator.Controls"
+    xmlns:local="clr-namespace:RedditVideoGenerator"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Width="1920"
@@ -34,6 +33,7 @@
 
                     <TextBlock
                         x:Name="PostTitleText"
+                        MaxWidth="1735"
                         Margin="0,5,0,0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Top"
@@ -70,14 +70,14 @@
                     Text="u/Username" />
             </StackPanel>
 
-            <htmltextblock:HtmlTextBlock
+            <RichTextBox
                 x:Name="CommentBodyText"
                 Margin="0,20,0,0"
-                FontFamily="/Resources/#Noto Sans"
-                FontSize="32"
+                Background="Transparent"
+                BorderThickness="0"
                 Foreground="#d7dadc"
-                LineHeight="1.25"
-                TextWrapping="Wrap" />
+                IsDocumentEnabled="True"
+                IsReadOnly="True" />
         </StackPanel>
 
         <StackPanel
