Sentence separation complete

--- a/RedditVideoGenerator/Controls/TitleCard.xaml
+++ b/RedditVideoGenerator/Controls/TitleCard.xaml
@@ -57,13 +57,13 @@
         <TextBlock
             x:Name="PostTitleText"
             Margin="0,20,0,0"
-            HorizontalAlignment="Left"
+            HorizontalAlignment="Stretch"
             VerticalAlignment="Top"
             FontFamily="/Resources/IBMPlexSans/#IBM Plex Sans"
             FontSize="48"
             FontWeight="Bold"
             Foreground="#d7dadc"
-            Text="Post title Lorem Ipsum Dolor Sit Amet Consecutor Consecutive I don't remember the rest."
+            Text="What is something that is considered socially attractive when you are physically attractive but isn't when you're ugly?"
             TextTrimming="CharacterEllipsis"
             TextWrapping="Wrap">
             <Run x:Name="PostNSFWTag" Foreground="#ff585b" />
