--- a/RedditVideoGenerator/Controls/CommentCard.xaml
+++ b/RedditVideoGenerator/Controls/CommentCard.xaml
@@ -76,6 +76,7 @@
             <RichTextBox
                 x:Name="CommentBodyText"
                 MaxHeight="725"
+                Margin="-9,20,0,0"
                 Background="Transparent"
                 BorderThickness="0"
                 Foreground="#d7dadc"
@@ -87,7 +88,7 @@
         <StackPanel
             Margin="0,20,0,0"
             HorizontalAlignment="Right"
-            VerticalAlignment="Bottom"
+            VerticalAlignment="Top"
             Orientation="Horizontal">
             <ui:SymbolIcon
                 FontSize="32"
