--- a/RedditVideoGenerator/YTSignInDialog.xaml
+++ b/RedditVideoGenerator/YTSignInDialog.xaml
@@ -8,8 +8,9 @@
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="Sign in to YouTube"
     Width="400"
-    Height="200"
+    Height="205"
     MinHeight="0"
+    d:WindowStyle="None"
     Closing="YTSignInDialog_Closing"
     ExtendsContentIntoTitleBar="True"
     Icon="/Resources/icon.ico"
