Made reddit API generate new app specific access token, and some UI changes

--- a/RedditVideoGenerator/MainWindow.xaml
+++ b/RedditVideoGenerator/MainWindow.xaml
@@ -8,7 +8,8 @@
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="RedditVideoGenerator - Generate r/AskReddit Reddit videos and upload them to YouTube automatically"
     Width="900"
-    Height="582"
+    Height="600"
+    Background="{ui:ThemeResource ApplicationBackgroundBrush}"
     Closing="MainWindow_Closing"
     ExtendsContentIntoTitleBar="True"
     Icon="/Resources/icon.ico"
@@ -64,8 +65,7 @@
                 Grid.ColumnSpan="2"
                 Margin="0,10,0,0"
                 VerticalAlignment="Stretch"
-                FontFamily="Lucida Console"
-                FontSize="14"
+                FontFamily="/Resources/CascadiaCode/#Cascadia Code"
                 IsReadOnly="True"
                 IsReadOnlyCaretVisible="True"
                 Loaded="ConsoleOutput_Loaded"
