--- a/RedditVideoGenerator/YTSignInDialog.xaml
+++ b/RedditVideoGenerator/YTSignInDialog.xaml
@@ -1,4 +1,4 @@
-﻿<ui:MessageBox
+﻿<ui:UiWindow
     x:Class="RedditVideoGenerator.YTSignInDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,17 +9,26 @@
     Title="Sign in to YouTube"
     Width="400"
     Height="205"
-    ButtonLeftAppearance="Primary"
-    ButtonLeftName="Sign in to your YouTube account"
-    ButtonLeftClick="SignInBtn_Click"
-    ButtonRightAppearance="Secondary"
-    ButtonRightName="N"
+    MinHeight="0"
+    d:WindowStyle="None"
     Closing="YTSignInDialog_Closing"
+    ExtendsContentIntoTitleBar="True"
     Icon="/Resources/icon.ico"
     ResizeMode="NoResize"
+    Style="{DynamicResource UiWindow}"
+    WindowBackdropType="Mica"
+    WindowCornerPreference="Round"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid>
+        <ui:TitleBar
+            Title="Sign in to YouTube"
+            CanMaximize="False"
+            Icon="/Resources/icon.ico"
+            ShowMaximize="False"
+            ShowMinimize="False"
+            UseSnapLayout="True" />
+
         <StackPanel Margin="10,51,10,10">
             <TextBlock
                 HorizontalAlignment="Center"
@@ -35,6 +44,15 @@
                 Margin="0,20,0,0"
                 HorizontalAlignment="Center"
                 Source="/Resources/YTLight.png" />
+
+            <ui:Button
+                x:Name="SignInBtn"
+                Margin="0,20,0,0"
+                HorizontalAlignment="Center"
+                Appearance="Primary"
+                Click="SignInBtn_Click"
+                Content="Sign in to your YouTube account"
+                IsDefault="True" />
         </StackPanel>
     </Grid>
-</ui:MessageBox>
+</ui:UiWindow>
